--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "three": "^0.138.0",
     "vue": "^3.2.25"
